# syrep

./: Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  docs  rules
doc/: Makefile.am  Makefile.in  README  README.html  README.html.in  package.txt  style.css  todo.txt  usage-intro.txt
man/: Makefile.am  Makefile.in  man.css  man.xsl  syrep.1  syrep.1.xml.in  xmltoman.css  xmltoman.dtd  xmltoman.xsl
src/: Makefile.am  Makefile.in  cache.c  cache.h  cleanup.c  cleanup.h  cmdline.c  cmdline.h  context.c  context.h  copy-fd-test.c  dbstruct.h  dbutil.c  dbutil.h  diff.c  diff.h  dump.c  dump.h  extract.c  extract.h  forget.c  forget.h  history.c  history.h  info.c  info.h  list.c  list.h  makepatch.c  makepatch.h  md5.c  md5.h  md5util.c  md5util.h  merge.c  merge.h  mkdtemp.c  package.c  package.h  rm-rf-test.c  (+8 more)
